relative filepath corrections

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="_assets/thirdpartylib/bootstrap-4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./_assets/thirdpartylib/bootstrap-4.3.1/css/bootstrap.min.css">
     <!-- Font Awesome CSS -->
-    <link rel="stylesheet" href="_assets/thirdpartylib/fontawesome-free-5.9.0-web/css/all.min.css">
+    <link rel="stylesheet" href="./_assets/thirdpartylib/fontawesome-free-5.9.0-web/css/all.min.css">
     <!-- Template CSS -->
-    <link rel="stylesheet" href="_assets/css/lsl_styles.css">
+    <link rel="stylesheet" href="./_assets/css/lsl_styles.css">
     
     <title>LSL Brightspace Templates</title>
     </head>
