--- a/pages/lsl_media_feedback.html
+++ b/pages/lsl_media_feedback.html
@@ -66,7 +66,7 @@
    
    <!-- scripts -->
 
-<script src="../_assets/js/feedback_tag_modal.js"></script>
+<!-- <script src="../_assets/js/feedback_tag_modal.js"></script> -->
 <script src="../_assets/thirdpartylib/jquery/jquery-3.3.1.slim.min.js"></script>
 <!-- <script src="../_assets/thirdpartylib/popper-js/popper.min.js"></script> -->
 <script src="../_assets/thirdpartylib/bootstrap-4.3.1/js/bootstrap.min.js"></script>
